git-annex (10.20250321) UNRELEASED; urgency=medium

  * updatecluster, updateproxy: When a remote that has no annex-uuid is
    configured as annex-cluster-node, warn and avoid writing bad data to
    the git-annex branch.
  * Fix build without the assistant.
  * fsck: Avoid complaining about required content of dead repositories.
  * drop: Avoid redundant object directory thawing.
  * httpalso: Windows url fix.
  * Added remote.name.annex-web-options config, which is a per-remote
    version of the annex.web-options config.
  * migrate: Fix --remove-size to work when a file is not present.
    Fixes reversion introduced in version 10.20231129.
  * Support git remotes that use a IPV6 link-local address with a zone ID.
  * Support git remotes that use an url with a user name that is URL
    encoded, or in the case of an "scp-style" url, a user name that must be
    encoded to be legal in an URL.
  * Fix git-lfs special remote ssh endpoint discovery when the repository
    path is URL encoded.

 -- Joey Hess <id@joeyh.name>  Fri, 21 Mar 2025 12:27:11 -0400

git-annex (10.20250320) upstream; urgency=medium

  * Added the compute special remote.
  * addcomputed: New command, adds a file that is generated by a compute
    special remote.
  * recompute: New command, recomputes computed files.
  * findcomputed: New command, displays information about computed files.
  * Support help.autocorrect settings "prompt", "never", and "immediate".
  * Allow setting remote.foo.annex-tracking-branch to a branch name
    that contains "/", as long as it's not a remote tracking branch.
  * Added OsPath build flag, which speeds up git-annex's operations on files.
  * git-lfs: Added an optional apiurl parameter.
    (This needs version 1.2.5 of the haskell git-lfs library to be used.)
  * fsck: Remember the files that are checked, so a later run with --more
    will skip them, without needing to use --incremental.

 -- Joey Hess <id@joeyh.name>  Thu, 20 Mar 2025 13:10:48 -0400
