@@ -1,5 +1,6 @@
 git-annex (10.20250321) UNRELEASED; urgency=medium
 
+  * Added the mask special remote.
   * updatecluster, updateproxy: When a remote that has no annex-uuid is
     configured as annex-cluster-node, warn and avoid writing bad data to
     the git-annex branch.
